# AI-Study-Assistant

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: chat.py  debug.py  documents.py
backend/app/core/: config.py  deps.py
backend/app/graphs/: study_graph.py
backend/app/rag/: graph.py  state.py
backend/app/schemas/: chat.py  document.py
backend/app/services/: chunking_service.py  document_service.py  embedding_service.py  file_store.py  parser_service.py  vector_store.py
backend/studyassistant_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json  study_facts.txt  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src/components/: ChatPanel.tsx  DocumentsPanel.tsx  SourcesList.tsx  UploadPanel.tsx
frontend/src/lib/: api.ts
