[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studyassistant-backend"
version = "0.1.0"
description = "AI Study Assistant backend built with FastAPI, LangChain, and LangGraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "langchain>=0.3,<1.0",
  "langchain-community>=0.3,<1.0",
  "langchain-google-genai>=2.0,<3.0",
  "langchain-text-splitters>=0.3,<1.0",
  "langgraph>=0.2,<1.0",
  "faiss-cpu>=1.8,<2.0",
  "pypdf>=5.0,<6.0",
  "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.6,<1.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
